# Low-Resolution-Webcam-Filter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  style.css
.github/workflows/: release.yml
src/: config.py  content.py  filter.py  main.py  ui.py
src/setting/: config.py  preset.py  stylesheet.py
src/ui/: run.py  slider_params.py  ui.py
src/ui/design/: preset_panel.py  sliders.py  ui.py
