[project]
name = "low-resolution-webcam-filter"
version = "0.1.0"
description = "real-time webcam filter that simulates the look of low-resolution consumer webcams"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "opencv-python>=4.13.0.92",
    "pyinstaller>=6.20.0",
    "pyqt5>=5.15.11",
    "pyvirtualcam>=0.15.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'"
]
